[package]
name = "bitfun-product-capabilities"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "BitFun product capability pack contracts"

[lib]
name = "bitfun_product_capabilities"
crate-type = ["rlib"]

[dependencies]
bitfun-harness = { path = "../../execution/harness" }
bitfun-runtime-ports = { path = "../../contracts/runtime-ports" }
bitfun-tool-packs = { path = "../../execution/tool-provider-groups", default-features = false }
