[package]
name = "bitfun-runtime-ports"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Thin runtime ports for BitFun core decomposition"

[lib]
name = "bitfun_runtime_ports"
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
