[package]
name = "bitfun-agent-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Agent runtime contracts and owner decisions for BitFun"

[lib]
name = "bitfun_agent_runtime"
crate-type = ["rlib"]

[dependencies]
bitfun-runtime-ports = { path = "../../contracts/runtime-ports" }
dashmap = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
