[package]
name = "bitfun-agent-stream"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Lightweight agent stream processing for BitFun"

[lib]
name = "bitfun_agent_stream"
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitfun-events = { path = "../../contracts/events" }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
bitfun-agent-tools = { path = "../tool-contracts" }
tokio-stream = { workspace = true }
