[package]
name = "tool-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
globset = { workspace = true }
dunce = { workspace = true }
grep-regex = { workspace = true }
grep-searcher = { workspace = true }
ignore = { workspace = true }
log = { workspace = true }
vte = { workspace = true, features = ["ansi"] }
