[package]
name = "bitfun-tool-packs"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "BitFun concrete tool-pack owner crate"

[lib]
name = "bitfun_tool_packs"
crate-type = ["rlib"]

[features]
default = []
basic = []
git = []
mcp = []
browser-web = []
computer-use = []
image-analysis = []
miniapp = []
agent-control = []
product-full = ["basic", "git", "mcp", "browser-web", "computer-use", "image-analysis", "miniapp", "agent-control"]
