[package]
name = "bitfun-acp"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "BitFun Agent Client Protocol surface"

[lib]
name = "bitfun_acp"

[dependencies]
bitfun-core = { path = "../../assembly/core", default-features = false, features = ["product-full"] }
bitfun-agent-tools = { path = "../../execution/tool-contracts" }
bitfun-events = { path = "../../contracts/events" }

agent-client-protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
