[package]
name = "bitfun-relay-service"
version = "0.2.13"
authors = ["BitFun Team"]
edition = "2021"
description = "Reusable relay runtime for BitFun Remote Connect"

[lib]
name = "bitfun_relay_service"
path = "src/lib.rs"

[dependencies]
# Dependencies stay explicit so the service can be built with the standalone
# relay application without copying the root workspace manifest into Docker.
axum = { version = "0.8", features = ["json", "ws"] }
tower-http = { version = "0.6.11", features = ["cors"] }
# Keep the runtime surface explicit: relay needs multi-thread RT, timers,
# channels/semaphores, and TCP — not tokio's full feature set.
tokio = { version = "1.52", default-features = false, features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
dashmap = "6"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
subtle = "2"

# The relay stores encrypted blobs and password-derived hashes, not master keys.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
argon2 = "0.5"
aes-gcm = "0.10"
bitfun-page-function-runtime = { path = "../page-function-runtime" }
rusqlite = { version = "0.32", features = ["bundled", "hooks", "limits"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unexpected_cfgs = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
undocumented_unsafe_blocks = "warn"
