[package]
name = "bitfun-services-integrations"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "BitFun integration service owner crate"

[lib]
name = "bitfun_services_integrations"
crate-type = ["rlib"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
bitfun-events = { path = "../../contracts/events" }
bitfun-product-domains = { path = "../../contracts/product-domains", default-features = false, optional = true }
bitfun-runtime-ports = { path = "../../contracts/runtime-ports", optional = true }
aes-gcm = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
bitfun-services-core = { path = "../services-core", optional = true }
chrono = { workspace = true, optional = true }
dunce = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
git2 = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
sse-stream = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
which = { workspace = true, optional = true }

[target.'cfg(not(windows))'.dependencies]
git2 = { workspace = true, features = ["vendored-openssl"], optional = true }

[features]
default = []
announcement = []
git = ["bitfun-services-core", "chrono", "git2", "thiserror"]
file-watch = ["notify"]
function-agents = [
    "bitfun-product-domains/function-agents",
    "dep:bitfun-product-domains",
    "git",
]
mcp = [
    "aes-gcm",
    "anyhow",
    "async-trait",
    "base64",
    "bitfun-services-core",
    "futures",
    "rand",
    "reqwest",
    "rmcp",
    "rmcp/transport-streamable-http-client-reqwest",
    "sse-stream",
]
remote-connect = ["async-trait", "base64", "bitfun-runtime-ports", "uuid"]
remote-ssh = ["dunce", "sha2", "tokio-util"]
workspace-search = [
    "async-trait",
    "bitfun-services-core",
    "dunce",
    "thiserror",
    "which",
]
product-full = [
    "announcement",
    "file-watch",
    "function-agents",
    "git",
    "mcp",
    "remote-connect",
    "remote-ssh",
    "workspace-search",
]
