[package]
name = "bitfun-services-integrations"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "BitFun integration service owner crate"

[lib]
name = "bitfun_services_integrations"
crate-type = ["rlib"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
bitfun-agent-runtime = { path = "../../execution/agent-runtime", optional = true }
bitfun-agent-tools = { path = "../../execution/tool-contracts", optional = true }
bitfun-events = { path = "../../contracts/events" }
bitfun-product-domains = { path = "../../contracts/product-domains", default-features = false, optional = true }
bitfun-runtime-ports = { path = "../../contracts/runtime-ports", optional = true }
aes-gcm = { workspace = true, optional = true }
aes = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
bitfun-services-core = { path = "../services-core", default-features = false, optional = true }
chrono = { workspace = true, optional = true }
dunce = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
fs2 = { workspace = true, optional = true }
git2 = { workspace = true, optional = true }
hostname = { workspace = true, optional = true }
image = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
local-ip-address = { workspace = true, optional = true }
mac_address = { workspace = true, optional = true }
md5 = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
oxc = { workspace = true, optional = true }
qrcode = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-native-certs = { version = "0.8", optional = true }
sha2 = { workspace = true, optional = true }
sse-stream = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
urlencoding = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
which = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
russh = { workspace = true, optional = true }
russh-sftp = { workspace = true, optional = true }
russh-keys = { workspace = true, optional = true }
shellexpand = { workspace = true, optional = true }
ssh_config = { workspace = true, optional = true }
terminal-core = { path = "../terminal", optional = true }
x25519-dalek = { workspace = true, optional = true }

[target.'cfg(not(windows))'.dependencies]
git2 = { workspace = true, features = ["vendored-openssl"], optional = true }

[target.'cfg(windows)'.dependencies]
schannel = { version = "0.1", optional = true }
windows = { workspace = true, optional = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }

[features]
default = []
announcement = ["reqwest"]
browser-control = ["anyhow", "bitfun-services-core", "dirs", "reqwest", "thiserror"]
canvas-runtime = [
    "dep:bitfun-product-domains",
    "oxc",
    "sha2",
    "urlencoding",
    "uuid",
]
debug-log = ["anyhow", "chrono", "reqwest", "uuid"]
deep-research = ["bitfun-agent-runtime"]
git = ["bitfun-services-core", "chrono", "git2", "thiserror"]
file-watch = ["notify"]
function-agents = [
    "bitfun-product-domains/function-agents",
    "dep:bitfun-product-domains",
    "git",
]
mcp = [
    "aes-gcm",
    "anyhow",
    "async-trait",
    "base64",
    "bitfun-agent-tools",
    "bitfun-services-core",
    "futures",
    "rand",
    "reqwest",
    "rmcp",
    "rmcp/transport-streamable-http-client-reqwest",
    "sse-stream",
    "process-tree",
]
miniapp-runtime = [
    "base64",
    "bitfun-product-domains/miniapp",
    "bitfun-services-core",
    "dep:bitfun-product-domains",
    "dirs",
    "reqwest",
    "uuid",
    "which",
]
plugin-source = [
    "bitfun-product-domains/plugin-source",
    "dep:bitfun-product-domains",
    "dunce",
    "fs2",
    "hex",
    "libc",
    "sha2",
    "thiserror",
    "uuid",
    "windows",
]
remote-connect = [
    "anyhow",
    "aes",
    "aes-gcm",
    "argon2",
    "async-trait",
    "base64",
    "bitfun-agent-tools",
    "bitfun-services-core",
    "bitfun-runtime-ports",
    "chrono",
    "dirs",
    "futures",
    "hostname",
    "hex",
    "image",
    "local-ip-address",
    "mac_address",
    "md5",
    "qrcode",
    "rand",
    "reqwest",
    "rustls",
    "rustls-native-certs",
    "schannel",
    "sha2",
    "tokio-tungstenite",
    "urlencoding",
    "uuid",
    "which",
    "x25519-dalek",
]
remote-ssh = [
    "anyhow",
    "async-trait",
    "bitfun-runtime-ports",
    "dunce",
    "sha2",
    "terminal-core",
    "thiserror",
    "tokio-util",
]
remote-ssh-concrete = [
    "remote-ssh",
    "aes-gcm",
    "anyhow",
    "async-trait",
    "base64",
    "bitfun-runtime-ports",
    "chrono",
    "dirs",
    "rand",
    "russh",
    "russh-sftp",
    "russh-keys",
    "shellexpand",
    "ssh_config",
    "terminal-core",
    "thiserror",
    "uuid",
]
review-platform = [
    "async-trait",
    "bitfun-services-core",
    "chrono",
    "futures",
    "reqwest",
    "sha2",
    "thiserror",
    "urlencoding",
    "windows",
]
workspace-search = [
    "async-trait",
    "bitfun-services-core",
    "dunce",
    "thiserror",
    "which",
]
process-tree = ["bitfun-services-core"]
script-tool-runtime = ["async-trait", "bitfun-runtime-ports", "process-tree", "which"]
web-tools = ["reqwest", "thiserror"]
product-full = [
    "announcement",
    "browser-control",
    "canvas-runtime",
    "debug-log",
    "deep-research",
    "file-watch",
    "function-agents",
    "git",
    "miniapp-runtime",
    "mcp",
    "plugin-source",
    "remote-connect",
    "remote-ssh",
    "remote-ssh-concrete",
    "review-platform",
    "script-tool-runtime",
    "web-tools",
    "workspace-search",
]
ssh_config = ["dep:ssh_config"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[[test]]
name = "debug_log_owner_contracts"
required-features = ["debug-log"]

[[test]]
name = "script_tool_runtime"
required-features = ["script-tool-runtime"]

[lints]
workspace = true
