[package]
name = "terminal-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A standalone terminal module"

[lib]
name = "terminal_core"
path = "src/lib.rs"

[dependencies]
# PTY support
portable-pty = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }
rand = { workspace = true }
chardetng = { workspace = true }
encoding_rs = { workspace = true }
libc = { workspace = true }

# UUID for session IDs
uuid = { workspace = true }

# Time handling
chrono = { workspace = true }

# Concurrent collections
dashmap = { workspace = true }

# Platform directories
dirs = { workspace = true }

[dev-dependencies]

